--- a/demo.html
+++ b/demo.html
@@ -90,6 +90,6 @@
 
     <script src="js/tool.js"></script>
     <script src="js/sort.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
