get the array to sort by keyboard input

--- a/demo.html
+++ b/demo.html
@@ -28,6 +28,7 @@
     <div class="container">
         <nav class="side-bar">
             <ul>
+                待排序的数字: <input type="text" id="numbers" name="numbers" value="120 130 200 321 386 380 165 192 263 284"><br>
                 <li>
                     <div class="button-insert-sort item">
                         <span class="iconfont icon-sort"></span>
